等宽列和不等宽列两种情况表格

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.thomas.excel.spanel"
+        applicationId "com.thomas.excel.panel"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
