--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.thomas.excel.spanel">
+    package="com.thomas.excel.panel">
 
     <application
         android:allowBackup="true"
@@ -9,13 +9,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.thomas.excel.spanel.MainActivity">
+        <activity android:name="com.thomas.excel.panel.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.thomas.excel.panel.ScoreActivity" />
+        <activity android:name="com.thomas.excel.panel.SpecifyActivity" />
 
     </application>
 
